# nexus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  I18N_PLAN.md  Justfile  LICENSE  MONITORING_INTEGRATION_AUDIT.md  Makefile  NEXT_STEPS_WORLD_CLASS.md  NEXUS_FEATURE_ROADMAP.md  PLAN.md  PLAN_FULL.md  PLAN_VERIFICATION_REPORT.md  README.md  RESPONSIVENESS_AND_PWA_PLAN.md  ROADMAP.md  TOOLS_PLAN.md  WORLD_CLASS_AUDIT.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  railway.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-instance.yml  deploy-production.yml  deploy-staging.yml  monitor.yml  railway-deploy.yml
.next/: trace  trace-build
backend/: auth.py  cache.py  config.py  db.py  indexes.py  logging_config.py  main.py  middleware.py  models.py  rate_limit.py  redis.py  telemetry.py  vector_db.py  version.py
backend/prompts/: system.py  tools.py
backend/routers/: admin.py  admin_analytics.py  agent_runs.py  agent_schedules.py  agents.py  analytics.py  approval_gates.py  chat.py  compliance.py  conversations.py  external_actions.py  feedback.py  integrations.py  jobs.py  knowledge.py  marketplace.py  media.py  memory.py  orgs.py  projects.py  prompt_templates.py  sandboxes.py  search.py  test_cases.py  tts.py  users.py
backend/services/: agent.py  artifact_model.py  audit.py  chart_tool.py  circuit_breaker.py  cleanup.py  event_taxonomy.py  extraction.py  jobs.py  limits.py  llm.py  mcp_client.py  media.py  memory.py  messages.py  multi_agent.py  notifications.py  plugin_registry.py  rbac.py  request_lifecycle.py  retry.py  sandbox.py  schedule_worker.py  search.py  sql_tool.py  tables.py  timeout.py  tool_contracts.py  web.py
backend/services/agent/: __init__.py  history.py  runner.py  stream_mapper.py  tool_executor.py  usage.py
backend/services/rag/: __init__.py  citations.py  contextual.py  embeddings.py  ingestion.py  pipeline.py  retrieval.py
frontend/: Dockerfile  index.html  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.tsx
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  sitemap.ts  template.tsx
frontend/app/admin/: page.tsx
frontend/app/agents/: page.tsx
frontend/app/apple-touch-icon.png/: route.ts
frontend/app/knowledge/: page.tsx
frontend/app/login/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/components/: agent-picker.tsx  agent-run-history.tsx  agent-run-inspector.tsx  agent-schedule-manager.tsx  agents-view.tsx  approval-gate-card.tsx  artifact-center.tsx  artifacts-panel.tsx  auth-provider.tsx  bug-report-dialog.tsx  chat-input.tsx  chat-messages.tsx  citation-chip.tsx  citation-detail.tsx  command-palette.tsx  confidence-indicator.tsx  confirm-dialog.tsx  context-window-viz.tsx  create-org-dialog.tsx  degraded-banner.tsx  diff-viewer.tsx  empty-state.tsx  error-boundary.tsx  execution-timeline.tsx  external-action-panel.tsx  files-panel.tsx  form-renderer.tsx  global-shell.tsx  health-banner.tsx  icon-picker.tsx  install-prompt.tsx  kb-picker.tsx  keyboard-shortcuts.tsx  knowledge-base.tsx  markdown-content.tsx  marketplace-view.tsx  memory-panel.tsx  message-bubble.tsx  model-picker.tsx  offline-banner.tsx  (+27 more)
frontend/components/__tests__/: command-palette.test.tsx  empty-state.test.tsx  (+2 more)
frontend/e2e/: smoke.spec.ts
frontend/i18n/: request.ts
frontend/lib/: api.ts  auth.ts  error-reporter.ts  execution-types.ts  form-submission.ts  landing-prompts.json  landing-prompts.ts  markdown.ts  onboarding-tour.ts  request-types.ts  runtime.ts  sse.ts  store.ts  thinking-messages.ts  types.ts  use-api.ts  use-high-contrast.ts  use-optimistic.ts  useMediaQuery.ts  useStreaming.ts  useVisualViewport.ts  utils.ts  ws.ts
frontend/messages/: de.json  en.json
frontend/public/: sw.js
frontend/src/: auth.ts  main.ts  router.ts  state.ts
frontend/types/: css.d.ts
grafana/: Caddyfile.tempo-proxy  Dockerfile.tempo  Dockerfile.tempo-proxy  nexus-dashboard.json  prometheus.yml  tempo.yml
migrations/: env.py
migrations/versions/: 57794264c17c_initial_schema.py  add_audit_events_table.py  add_branching_to_messages.py  add_category_to_agent_personas.py  add_charts_to_messages.py  add_citations_to_messages.py  add_conversation_knowledge_base_ids.py  add_images_to_messages.py  add_installed_from_id_to_agent_personas.py  add_memories_table.py  add_multi_org.py  add_optional_feature_tables.py  add_platform_feature_tables.py  add_projects_table.py  add_role_to_users.py  add_user_settings_and_message_fts.py  d1e2f3a4b5c6_add_installed_from_id_and_access_mode_.py  e2f3a4b5c6d7_add_listing_type_knowledge_base_id_.py  restore_is_admin_to_users.py
railway/: backend.toml  frontend.toml
scripts/: litellm_foundry_models.py  run_backend_migrations.sh  run_landing_prompt_suite.py  seed_dev_data.py  smoke_check.py  test_all_models.py
tests/: conftest.py  test_agent_knowledge_gating.py  test_artifact_plumbing.py  test_auth.py  test_chart_tool.py  test_config.py  test_health.py  test_jobs.py  test_memory_service.py  test_middleware.py  test_models.py  test_multi_org.py  test_platform_features.py  test_prompt_tooling.py  test_rate_limit.py  test_rate_limit_async.py  test_sandbox_service.py  test_security_guards.py  test_sql_tool.py  test_telemetry.py  test_web_tools.py
(+92 files in other folders)
