[project]
name = "nexus"
version = "0.1.0"
description = "AI Agent Workspace with Sandboxed Code Execution"
license = "Apache-2.0"
authors = [{ name = "Bastian Eichenberger", email = "" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.10.0",
    "httpx>=0.28.0",
    "workos>=4.0.0",
    "daytona-sdk>=0.10.5",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.0",
    "websockets>=14.0",
    "openai>=1.60.0",
    "serpapi>=0.1.5",
    "structlog>=25.5.0",
    "pgvector>=0.3.0",
    "tiktoken>=0.8.0",
    "cohere>=5.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.0.0",
    "trafilatura>=1.12.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
    "redis[hiredis]>=5.0.0",
    "aiosmtplib>=3.0.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
