[project]
name = "nexus"
version = "0.1.0"
description = "AI Agent Workspace with Sandboxed Code Execution"
license = "Apache-2.0"
authors = [{ name = "Bastian Eichenberger", email = "" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyjwt>=2.12.1",
    "httpx>=0.28.1",
    "workos>=6.0.2",
    "daytona-sdk>=0.165.0",
    "python-multipart>=0.0.26",
    "sse-starlette>=3.3.4",
    "websockets>=16.0",
    "openai>=2.31.0",
    "serpapi>=1.0.2",
    "structlog>=25.5.0",
    "pgvector>=0.4.2",
    "tiktoken>=0.12.0",
    "cohere>=6.1.0",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "pypdf>=6.10.1",
    "trafilatura>=2.0.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "prometheus-client>=0.25.0",
    "redis[hiredis]>=7.4.0",
    "aiosmtplib>=5.1.0",
    "croniter>=6.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "aiosqlite>=0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
